--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ h1 {
 .number {
   background: #eee;
   color: #333;
-  font-size: 6rem;
+  font-size: 8rem;
   width: 15rem;
   padding: 3rem 0rem;
   text-align: center;
@@ -119,7 +119,7 @@ h1 {
   margin-bottom: 2rem;
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   body {
     overflow-x: hidden;
     height: 10vh;
@@ -135,17 +135,23 @@ h1 {
     padding: 2rem;
     height: 50vh;
   }
+  .number {
+    /* font-size: 4rem; */
+    width: 15rem;
+    padding: 3rem 0rem;
+    text-align: center;
+  }
   .between {
     font-size: 1.2rem;
     text-align: center;
   }
   .guess {
-    font-size: 5rem;
-    padding: 2.5rem;
-    width: 15rem;
+    font-size: 2.5rem;
+    padding: 1.5rem;
+    width: 12rem;
     text-align: center;
     display: block;
-    margin-bottom: 3rem;
+    margin-top: 3rem;
   }
   .right {
     display: grid;
@@ -167,5 +173,31 @@ h1 {
     font-size: 1.32rem;
     padding: 2rem 3rem;
     margin: 2rem;
+  }
+}
+@media (max-width: 500px) {
+  body {
+    overflow-x: hidden;
+    width: 100%;
+  }
+  .guess {
+    overflow-x: hidden;
+    font-size: 2rem;
+    /* padding: 2.5rem; */
+    width: 10rem;
+    text-align: center;
+    display: block;
+    margin-top: 3rem;
+  }
+  /* .number {
+    font-size: 2rem;
+    width: 5rem;
+    padding: 3rem 0rem;
+    text-align: center;
+  } */
+  header {
+    position: relative;
+    height: 30vh;
+    border-bottom: 7px solid #eee;
   }
 }
